tests/cases/structs/errors/struct-literal-extra-field.ari
struct Point {
  x: i64,
}

fn main() -> i64 {
  let point = Point { x: 1, y: 2 };
  return point.x;
}
